--- a/sample.html
+++ b/sample.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"><!-- meta要素は、文章に関する情報を指定するもの -->
     <title>初めてのHTML</title><!-- ブラウザのツールバーや検索エンジンの検索結果のページ名になる -->
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="sample.css">
 </head>
 <body><!-- ページのコンテンツを記述する部分 -->
     <!-- ここからコードを書きましょう -->
